Closed
Bug 226167
Opened 21 years ago
Closed 21 years ago
DRefTool analysis for soap files
Categories
(Core Graveyard :: Web Services, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
2.40 KB,
patch
|
roc
:
review+
roc
:
superreview+
|
Details | Diff | Splinter Review |
Bugs:
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/extensions/webservices/soap/src/nsDefaultSOAPEncoder.cpp&rev=1.74&mark=2223#2218
Deref-error: "all"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/extensions/webservices/soap/src/nsDefaultSOAPEncoder.cpp&rev=1.74&mark=2230#2225
Deref-error: "all"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/extensions/webservices/soap/src/nsDefaultSOAPEncoder.cpp&rev=1.74&mark=2238#2233
Deref-error: "all"
http://bonsai.mozilla.org/cvsblame.cgi?file=mozilla/extensions/webservices/soap/src/nsDefaultSOAPEncoder.cpp&rev=1.74&mark=2244#2239
Deref-error: "all"
Attachment #135890 -
Flags: superreview?(roc)
Attachment #135890 -
Flags: review?(roc)
Attachment #135890 -
Flags: superreview?(roc)
Attachment #135890 -
Flags: superreview+
Attachment #135890 -
Flags: review?(roc)
Attachment #135890 -
Flags: review+
mozilla/extensions/webservices/soap/src/nsDefaultSOAPEncoder.cpp 1.76
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•