Bug 226167 DRefTool analysis for soap files r=roc sr=roc